Change in result view

--- a/src/main/resources/templates/result-view-individual.html
+++ b/src/main/resources/templates/result-view-individual.html
@@ -74,6 +74,8 @@
                                             <div class="mt-4"> <span class="d-block head text-warning">Science:<p th:text="${science}"></p></span>  </div>
                                             <div class="mt-4"> <span class="d-block head text-warning">English:<p th:text="${english}"></p></span>  </div>
                                             <div class="mt-4"> <span class="d-block head text-warning">Computer:<p th:text="${computer}"></p></span>  </div>
+                                            <div class="mt-4"> <span class="d-block head text-danger"><h4>TOTAL:</h4><p th:text="${total}"></p></span>  </div>
+											<div class="mt-4"> <span class="head text-danger"><h4>Percentage(%):</h4><p th:text="${percentage}"></p></span>  </div>                                            
                                         </div>
                                     </div>
                                 </div>
